﻿shmuel 03.08.2017 16:13:49 +0200 - build 610

1. Уточнение 609.3 (были удвоенные бэкслеши в путях).

shmuel 31.07.2017 17:05:07 +0200 - build 609

1. LuaFAR: добавлена функция win.IsProcess64bit().

2. Изменено значение по умолчанию для package.cpath. Вместо %FARPROFILE%\Macros\modules\?.dll
   теперь используется %FARPROFILE%\Macros\lib32\?.dll или %FARPROFILE%\Macros\lib64\?.dll
   в зависимости от битности процесса.

3. Папки %FARPROFILE%\Macros\modules, %FARPROFILE%\Macros\lib32 и %FARPROFILE%\Macros\lib64
   создаются плагином автоматически.

shmuel 23.06.2017 10:09:22 +0200 - build 608

1. LuaFAR: minor refactoring and GCC warnings.

shmuel 16.05.2017 11:42:28 +0200 - build 607

1. LuaFAR: (FIX) функция far.ShowHelp неправильно обрабатывала флаг FHELP_GUID.

shmuel 11.05.2017 13:00:01 +0200 - build 606

1. M#3432: Краткая справка по синтаксису командной строки LuaMacro (lua:)

shmuel 01.05.2017 22:01:38 +0200 - build 605

1. LuaFAR: Запретить обработку событий в редакторе, вьювере и панелях во время вывода сообщения
   об ошибке (продолжение build 523).

shmuel 12.04.2017 22:47:30 +0200 - build 604

1. LuaFAR: ещё раз дополнительная оптимизация unicode.utf8.sub.

shmuel 10.04.2017 11:12:30 +0200 - build 603

1. LuaFAR: дополнительная оптимизация unicode.utf8.sub.

shmuel 08.04.2017 14:16:00 +0200 - build 602

1. LuaFAR: оптимизация unicode.utf8.sub для неотрицательных аргументов + рефакторинг.

shmuel 07.04.2017 00:52:17 +0200 - build 601

1. LuaFAR (продолжение build 165):
   сброс разрешения floating point exceptions при вызове макрофункций (в частности: Plugin.SyncCall).

shmuel 31.03.2017 19:41:21 +0200 - build 600

1. LuaFAR: refactoring.

shmuel 15.03.2017 17:05:28 +0200 - build 599

1. LuaFAR: suppress compiler warning.

shmuel 15.03.2017 16:18:38 +0200 - build 598

1. LuaFAR: suppress compiler warning.

shmuel 13.02.2017 01:39:25 +0200 - build 597

1. LuaFAR: refactoring.

shmuel 23.01.2017 11:29:08 +0200 - build 596
