@@ -4,7 +4,7 @@
 "Ошибка при разборе макроса"
 
 "Исполнить макрос"
-"AltF4 - открыть в редакторе"
+"Цифра: исполнить | AltF4: открыть в редакторе"
 
 // macro browser help window
 "F1         показать эту справку"
