@@ -4,7 +4,7 @@
 "Error parsing macro"
 
 "Spustiť makro"
-"AltF4 - otvoriť v editore"
+"Číslica: spustiť | AltF4: otvoriť v editore"
 
 // macro browser help window
 "F1         zobraziť toto okno Pomocníka"
