@@ -1,4 +1,10 @@
-﻿shmuel 03.08.2017 16:13:49 +0200 - build 610
+﻿shmuel 07.08.2017 15:25:23 +0200 - build 611
+
+1. M#3464: Предложение корректировки формы меню "Исполнить макрос".
+   Изменение: порядковые номера пунктов не подсвечены, но тем не менее являются "горячими клавишами".
+   В дополнение к ним пользователь может назначить и подсвеченные "горячие клавиши".
+
+shmuel 03.08.2017 16:13:49 +0200 - build 610
 
 1. Уточнение 609.3 (были удвоенные бэкслеши в путях).
 
